--- a/scss/utilities/_cuidados.scss
+++ b/scss/utilities/_cuidados.scss
@@ -7,19 +7,20 @@
     .feng-cuidados{
         margin-top: 50px;
     }
+    .feng-intro{
+        width: 100%;
+        display: flex;
+        flex-wrap:wrap ;
+        justify-content: center;
+        align-items: center;
+
+    }
         .sub-intro{
             font-size: 1.2rem;
             margin-left: 30px;
             margin-bottom: 30px;
             text-decoration: underline;
             text-transform: capitalize;
-        }
-        .img-intro{
-            float: left;
-            border: 2px solid black;
-            margin-right: 10px;
-            width: 130px;
-            height: 100px;
         }
         .p-cuidado{
             text-align: justify;
@@ -34,34 +35,50 @@
         }
         .img-feng{
             border: 2px solid black;
-            width: 250px;
-            height: 150px;
-            margin-bottom: 60px;
-            margin-left: 10px
+            height: auto;
+            margin-bottom: 50px;
+            
         }
-        .img-cuidado-crasulla{
-            @extend %foto1;
+        .feng-beneficios{
+            display: flex;
+            flex-wrap: wrap;
+            justify-content: center;
         }
-        .img-cuidado-ovata{
-            @extend %foto2;
+            .feng-video{
+                margin: 30px;
+            }
+                .feng-video iframe{
+                    width: 340px;
+                    height: 280px;
+                }
+            
+        .feng-tipos-ppal{
         }
-        .img-cuidado-echeverria{
-            @extend %foto1;
-        }
-        .img-cuidado-sabila{
-            @extend %foto2;
-        }
-        .img-cuidado-cactus{
-            @extend %foto1;
-        }
+            .feng-tipos{
+                
+                height: auto;
+            }
+                .img-cuidado-izquierda{
+                    @extend %foto1;
+                    width: 60px;
+                    height: 60px;
+                    box-shadow: $col-sombra-derecha;
+                }
+                .img-cuidado-derecha{
+                    @extend %foto2;
+                    width: 60px;
+                    height: 60px;
+                    box-shadow: $col-sombra;
+                }
+        
 }
 
 /*media screen 768px*/
 
 @media screen and(min-width: 768px) {
     .cont-cuidados{
-        width: 80%;
-        margin: auto;
+        
+        
 
         .feng-cuidados{
         }
@@ -69,9 +86,7 @@
                 font-size: 1.8rem;
                 text-align: center;
             }
-            .img-intro{
-                margin-top: 5px;
-            }
+            
             .p-cuidado{
                 font-size: 1.1rem;
                 margin-bottom: 60px;
@@ -85,39 +100,40 @@
                 color: $col-text-contraste;
             }
             .img-feng{
-                width: 480px;
-                height: 320px;
+                min-width: 720px;   
             }
+            .feng-beneficios{
+            }
+                .feng-video{ 
+                    
+                }
+                .feng-video iframe{
+                    width: 750px;
+                    height: 480px;
+                }
+                
+            
             .feng-tipos{
                 
             }
-            .img-cuidado-crasulla{
+            .img-cuidado-izquierda{
                 width: 100px;
                 height: 100px;
             }
-            .img-cuidado-ovata{
-                width: 100px;
-                height: 100px;
-            }
-            .img-cuidado-echeverria{
-                width: 100px;
-                height: 100px;
-            }
-            .img-cuidado-sabila{
-                width: 100px;
-                height: 100px;
-            }
-            .img-cuidado-cactus{
+            .img-cuidado-derecha{
                 width: 100px;
                 height: 100px;
             }
     }   
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1200x) {
     .cont-cuidados{
+        
         .img-feng{
-            margin-left: 25%;
+            max-width: 800px;
+        }
+        .feng-tipos{
         }
     }
 }
