--- a/scss/utilities/_index.scss
+++ b/scss/utilities/_index.scss
@@ -31,7 +31,7 @@
     margin: 30px 30px;
 
     .card-index-foto{
-        box-shadow: 5px 5px 5px 5px $col-bordes;
+        box-shadow: $col-sombra;
         padding: 2.5px;
         margin: 10px 30px
     }
