--- a/scss/utilities/_especies.scss
+++ b/scss/utilities/_especies.scss
@@ -40,6 +40,7 @@
                 float: left;
                 margin-right: 15px;
                 width: 80px;
+                height: 80px;
             }
             .pint{
                 font-family: 'Roboto', sans-serif;
@@ -51,7 +52,7 @@
 
 
 /*media screen 1440px*/
-@media screen and(min-width: 1440px) {
+@media screen and(min-width: 1200px) {
     .container{
         main{
         }
@@ -77,7 +78,8 @@
                     font-size: 1.8rem;
                 }
                 img{
-                    width: 100px;
+                    width: 120px;
+                    height: 120px;
                 }
                 .pint{
                     font-size: 1rem;
