--- a/scss/utilities/_nosotros.scss
+++ b/scss/utilities/_nosotros.scss
@@ -1,21 +1,29 @@
-@import "base/variables";
-@import "base/mixin";
-@import "base/mapas";
-@import "base/listas";
+@import "../base/variables";
+@import "../base/mixin";
+@import "../base/mapas";
+@import "../base/listas";
 
 
 
 /*estilos main y aside*/
 
 .nos-cont{
-    width: 80%;
-    max-width: 1000px;
-    margin: 20px auto;
+    
     display: grid;
-    gap: 0.8em;
+    grid-template-columns: repeat(2 1fr);
+    grid-template-rows: 2fr 1fr;
+    justify-content: center;
+    align-items: center;
+    grid-template-areas: 
+        "main main"
+        "aside aside";
     
     .main-nos{
-        grid-column: 1/2;
+        grid-area: main;
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
+        margin:0 20px 0 20px;
     }
         .subt-nos{
             font-size: 1.2rem;
@@ -28,54 +36,68 @@
             text-align: justify;
             padding: 5px;
             letter-spacing: 3px;
-            font-weight: 3px;
             @include bordes;
             
         }
+
     .aside-nos{
-        width: 20%;
+        grid-area: aside;
+        
+        display: flex;
+        flex-wrap: wrap;
+        justify-content: center;
     }
-        .nos-foto-1{
-            padding-left: 120%;
-            margin: 5px;
-        }
-        .nos-foto-2{
-            padding-left: 120%;
-            margin: 5px;
-        }
-        .nos-foto-3{
-            padding-left: 120%;
-            margin: 5px;
+        .nos-foto{
+            
         }
         .foto-aside{
-            @include borde-foto
+            box-shadow: $col-sombra;
+            width: 100px;
+            height: 100px;
+            padding: 5px;
+            margin: 5px;
+            
+            
         }
 }
 
 @media screen and (min-width: 768px) {
     .nos-cont{
-        grid-template-columns: 1fr 1fr;
+        display: grid;
+        grid-template-columns: repeat(3 1fr);
+        grid-template-rows: auto;
         grid-template-areas: 
-        "main aside";
+        "main mani aside";
+        justify-content: center;
+        align-items: center;
         
         .main-nos{
-            grid-area: main;
-            width: 300px;
         }
+            .subt-nos{
+
+            }
+            .p-nosotros{
+
+            }
 
         .aside-nos{
-            grid-area: aside;
-            width: 30%;
-            margin-top: 100px;
+            flex-direction: column;
+            padding: 50px;
+
         }
+            .nos-foto{
+                
+            }
+            .foto-aside{
+                width: 120px;
+                height: 120px;
+                                
+            }
     }
 }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1200px) {
     .nos-cont{
-        grid-template-columns: 1fr 1fr;
-        grid-template-areas: 
-        "main aside";
         
         .main-nos{
             width: 700px;
