--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,22 +1,18 @@
 .cont-cuidados {
-  width: 75%;
+  width: 90%;
   margin: auto; }
 
-.cont-cuidados .img-cuidado-crasulla, .cont-cuidados .img-cuidado-echeverria, .cont-cuidados .img-cuidado-cactus {
+.cont-cuidados .img-cuidado-izquierda {
   float: left;
   border: 2px solid black;
   margin-right: 10px;
-  margin-top: 5px;
-  width: 60px;
-  height: 60px; }
+  margin-top: 10px; }
 
-.cont-cuidados .img-cuidado-ovata, .cont-cuidados .img-cuidado-sabila {
+.cont-cuidados .img-cuidado-derecha {
   float: right;
   border: 2px solid black;
   margin-left: 10px;
-  margin-top: 5px;
-  width: 60px;
-  height: 60px; }
+  margin-top: 10px; }
 
 /*reset*/
 * {
@@ -24,13 +20,11 @@
   padding: 0;
   box-sizing: border-box; }
 
-/*estilo gral body*/
 body {
   background-color: #c0a26f;
   width: 100vw;
   height: 100vh; }
 
-/*importar estilos header*/
 /*header*/
 .head-nav .titulo {
   text-align: center;
@@ -48,6 +42,16 @@ body {
   color: #c0a26f;
   font-size: x-large; }
 
+/*footer*/
+footer {
+  text-align: center;
+  border-top: 2px solid; }
+
+.p-foot {
+  font-size: .8rem;
+  font-weight: bold;
+  padding-top: 10px; }
+
 @media screen and (min-width: 768px) {
   body {
     max-width: 80%;
@@ -61,7 +65,7 @@ body {
   .nav-link {
     font-size: 3rem; } }
 
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1200px) {
   .titulo-h1 {
     font-size: 5rem; }
   .navbar {
@@ -70,10 +74,34 @@ body {
     width: 250px; }
   .nav-item {
     padding-left: 30px; }
-  .nav-link {
-    font-size: 2rem; } }
+  .nav-item :hover {
+    border-radius: 15px;
+    color: #d07b05;
+    font-size: 200%;
+    border-right: 3px solid black;
+    border-bottom: 3px solid black;
+    border-top: 1px solid black;
+    border-left: 1px solid black; }
+  .p-foot {
+    font-size: 1.2rem; } }
 
 /*importar estilos index*/
+.cont-cuidados {
+  width: 90%;
+  margin: auto; }
+
+.cont-cuidados .img-cuidado-izquierda {
+  float: left;
+  border: 2px solid black;
+  margin-right: 10px;
+  margin-top: 10px; }
+
+.cont-cuidados .img-cuidado-derecha {
+  float: right;
+  border: 2px solid black;
+  margin-left: 10px;
+  margin-top: 10px; }
+
 .main-index {
   width: 80%;
   height: auto;
@@ -90,38 +118,30 @@ body {
     border: solid 3px #61481c;
     padding: 15px;
     font-size: 0.8rem; }
-  .main-index .cajadefotos {
-    display: flex;
-    justify-content: space-evenly;
-    margin: 30px;
-    padding: 30px;
-    column-gap: 20px; }
-  .main-index .foto1 {
-    width: 60px;
-    height: 60px; }
-  .main-index .foto2 {
-    width: 60px;
-    height: 60px; }
-  .main-index .foto3 {
-    width: 60px;
-    height: 60px; }
-  .main-index .foto4 {
-    width: 60px;
-    height: 60px; }
-  .main-index .pfoto {
+
+.index-cajadefotos {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: space-evenly;
+  align-items: center;
+  margin: 30px 30px; }
+  .index-cajadefotos .card-index-foto {
+    box-shadow: 5px 5px 5px 5px #61481c;
+    padding: 2.5px;
+    margin: 10px 30px; }
+  .index-cajadefotos .card-foto {
+    width: 80px;
+    height: 80px;
+    border: 0.5px solid #61481c; }
+  .index-cajadefotos .intro-index-foto {
+    background-color: #61481c;
+    height: auto; }
+  .index-cajadefotos .card-titulo {
+    font-size: .8em;
+    color: whitesmoke;
+    padding: 5px;
     text-align: center;
-    font-style: oblique;
-    font-size: .6em; }
-
-/*footer*/
-footer {
-  text-align: center;
-  border-top: 2px solid; }
-
-.p-foot {
-  font-size: .8rem;
-  font-weight: bold;
-  padding-top: 10px; }
+    margin-bottom: -1.5px; }
 
 @media screen and (min-width: 768px) {
   .main-index .subtitulo {
@@ -129,36 +149,34 @@ footer {
     text-decoration: underline; }
   .main-index .pmain {
     font-size: 1.2rem; }
-  .main-index .foto1 {
-    width: 90px;
-    height: 90px; }
-  .main-index .foto2 {
-    width: 90px;
-    height: 90px; }
-  .main-index .foto3 {
-    width: 90px;
-    height: 90px; }
-  .main-index .foto4 {
-    width: 90px;
-    height: 90px; }
-  .main-index .pfoto {
-    text-align: center;
-    font-style: oblique;
-    font-weight: bold;
-    font-size: .9em; }
-  .p-foot {
-    font-size: 1.2rem; } }
+  .index-cajadefotos .card-index-foto {
+    margin: 30px 10px; }
+  .index-cajadefotos .card-foto {
+    width: 100px;
+    height: 100px; } }
+
+@media screen and (min-width: 1200px) {
+  .index-cajadefotos .card-index-foto {
+    padding: 2.5px; }
+  .index-cajadefotos .card-foto {
+    width: 120px;
+    height: 120px; } }
 
 /*importar estilos nosotros*/
-/*estilos nosotros*/
+/*estilos main y aside*/
 .nos-cont {
-  width: 80%;
-  max-width: 1000px;
-  margin: 20px auto;
   display: grid;
-  gap: 0.8em; }
+  grid-template-columns: repeat(2 1fr);
+  grid-template-rows: 2fr 1fr;
+  justify-content: center;
+  align-items: center;
+  grid-template-areas: "main main" "aside aside"; }
   .nos-cont .main-nos {
-    grid-column: 1/2; }
+    grid-area: main;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center;
+    margin: 0 20px 0 20px; }
   .nos-cont .subt-nos {
     font-size: 1.2rem;
     text-align: center;
@@ -169,67 +187,46 @@ footer {
     text-align: justify;
     padding: 5px;
     letter-spacing: 3px;
-    font-weight: 3px;
     border: solid 3px #61481c; }
   .nos-cont .aside-nos {
-    width: 20%; }
-  .nos-cont .nos-foto-1 {
-    padding-left: 120%;
-    margin: 5px; }
-  .nos-cont .nos-foto-2 {
-    padding-left: 120%;
-    margin: 5px; }
-  .nos-cont .nos-foto-3 {
-    padding-left: 120%;
-    margin: 5px; }
+    grid-area: aside;
+    display: flex;
+    flex-wrap: wrap;
+    justify-content: center; }
   .nos-cont .foto-aside {
-    border: 2px solid black; }
+    box-shadow: 5px 5px 5px 5px #61481c;
+    width: 100px;
+    height: 100px;
+    padding: 5px;
+    margin: 5px; }
 
 @media screen and (min-width: 768px) {
-  .titulo-h1 {
-    font-size: 3rem; }
-  .navbar {
-    height: 100px; }
-  .logo {
-    width: 150px; }
-  .nav-link {
-    font-size: 3rem; }
   .nos-cont {
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas: "main aside"; }
-    .nos-cont .main-nos {
-      grid-area: main;
-      width: 300px; }
+    display: grid;
+    grid-template-columns: repeat(3 1fr);
+    grid-template-rows: auto;
+    grid-template-areas: "main mani aside";
+    justify-content: center;
+    align-items: center; }
     .nos-cont .aside-nos {
-      grid-area: aside;
-      width: 30%;
-      margin-top: 100px; } }
+      flex-direction: column;
+      padding: 50px; }
+    .nos-cont .foto-aside {
+      width: 120px;
+      height: 120px; } }
 
-@media screen and (min-width: 1440px) {
-  .titulo-h1 {
-    font-size: 5rem; }
-  .navbar {
-    height: 120px; }
-  .logo {
-    width: 250px; }
-  .nav-item {
-    padding-left: 30px; }
-  .nav-link {
+@media screen and (min-width: 1200px) {
+  .nos-cont .main-nos {
+    width: 700px; }
+  .nos-cont .subt-nos {
     font-size: 2rem; }
-  .nos-cont {
-    grid-template-columns: 1fr 1fr;
-    grid-template-areas: "main aside"; }
-    .nos-cont .main-nos {
-      width: 700px; }
-    .nos-cont .subt-nos {
-      font-size: 2rem; }
-    .nos-cont .p-nosotros {
-      font-size: 1.1rem;
-      letter-spacing: 1;
-      line-height: 1.8; }
-    .nos-cont .aside-nos {
-      width: 50%;
-      margin-top: 70px; } }
+  .nos-cont .p-nosotros {
+    font-size: 1.1rem;
+    letter-spacing: 1;
+    line-height: 1.8; }
+  .nos-cont .aside-nos {
+    width: 50%;
+    margin-top: 70px; } }
 
 /*importar estilos especies*/
 /*main especies*/
@@ -263,7 +260,8 @@ footer {
 .container img {
   float: left;
   margin-right: 15px;
-  width: 80px; }
+  width: 80px;
+  height: 80px; }
 
 .container .pint {
   font-family: 'Roboto', sans-serif;
@@ -272,7 +270,7 @@ footer {
   text-align: justify; }
 
 /*media screen 1440px*/
-@media screen and (min-width: 1440px) {
+@media screen and (min-width: 1200px) {
   .container .bg-titulo2 {
     font-size: 2.5rem;
     margin-top: 70px;
@@ -285,33 +283,37 @@ footer {
   .container .h3 {
     font-size: 1.8rem; }
   .container img {
-    width: 100px; }
+    width: 120px;
+    height: 120px; }
   .container .pint {
     font-size: 1rem; } }
 
 /*importar estilos cuidados*/
 .cont-cuidados {
-  width: 75%;
+  width: 90%;
   margin: auto; }
 
-.cont-cuidados .img-cuidado-crasulla, .cont-cuidados .img-cuidado-echeverria, .cont-cuidados .img-cuidado-cactus {
+.cont-cuidados .img-cuidado-izquierda {
   float: left;
   border: 2px solid black;
   margin-right: 10px;
-  margin-top: 5px;
-  width: 60px;
-  height: 60px; }
+  margin-top: 10px; }
 
-.cont-cuidados .img-cuidado-ovata, .cont-cuidados .img-cuidado-sabila {
+.cont-cuidados .img-cuidado-derecha {
   float: right;
   border: 2px solid black;
   margin-left: 10px;
-  margin-top: 5px;
-  width: 60px;
-  height: 60px; }
+  margin-top: 10px; }
 
 .cont-cuidados .feng-cuidados {
   margin-top: 50px; }
+
+.cont-cuidados .feng-intro {
+  width: 100%;
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center;
+  align-items: center; }
 
 .cont-cuidados .sub-intro {
   font-size: 1.2rem;
@@ -319,13 +321,6 @@ footer {
   margin-bottom: 30px;
   text-decoration: underline;
   text-transform: capitalize; }
-
-.cont-cuidados .img-intro {
-  float: left;
-  border: 2px solid black;
-  margin-right: 10px;
-  width: 130px;
-  height: 100px; }
 
 .cont-cuidados .p-cuidado {
   text-align: justify;
@@ -340,64 +335,74 @@ footer {
 
 .cont-cuidados .img-feng {
   border: 2px solid black;
-  width: 250px;
-  height: 150px;
-  margin-bottom: 60px;
-  margin-left: 10px; }
+  height: auto;
+  margin-bottom: 50px; }
+
+.cont-cuidados .feng-beneficios {
+  display: flex;
+  flex-wrap: wrap;
+  justify-content: center; }
+
+.cont-cuidados .feng-video {
+  margin: 30px; }
+
+.cont-cuidados .feng-video iframe {
+  width: 340px;
+  height: 280px; }
+
+.cont-cuidados .feng-tipos {
+  height: auto; }
+
+.cont-cuidados .img-cuidado-izquierda {
+  width: 60px;
+  height: 60px;
+  box-shadow: -5px 5px 5px 5px #61481c; }
+
+.cont-cuidados .img-cuidado-derecha {
+  width: 60px;
+  height: 60px;
+  box-shadow: 5px 5px 5px 5px #61481c; }
 
 /*media screen 768px*/
 @media screen and (min-width: 768px) {
-  .cont-cuidados {
-    width: 80%;
-    margin: auto; }
-    .cont-cuidados .sub-intro {
-      font-size: 1.8rem;
-      text-align: center; }
-    .cont-cuidados .img-intro {
-      margin-top: 5px; }
-    .cont-cuidados .p-cuidado {
-      font-size: 1.1rem;
-      margin-bottom: 60px;
-      letter-spacing: 3px;
-      line-height: 1.8em; }
-    .cont-cuidados .enc-cuidado {
-      font-size: 1.5rem;
-      background-color: #63632d;
-      text-align: center;
-      color: #fff; }
-    .cont-cuidados .img-feng {
-      width: 480px;
-      height: 320px; }
-    .cont-cuidados .img-cuidado-crasulla {
-      width: 100px;
-      height: 100px; }
-    .cont-cuidados .img-cuidado-ovata {
-      width: 100px;
-      height: 100px; }
-    .cont-cuidados .img-cuidado-echeverria {
-      width: 100px;
-      height: 100px; }
-    .cont-cuidados .img-cuidado-sabila {
-      width: 100px;
-      height: 100px; }
-    .cont-cuidados .img-cuidado-cactus {
-      width: 100px;
-      height: 100px; } }
-
-@media screen and (min-width: 1440px) {
+  .cont-cuidados .sub-intro {
+    font-size: 1.8rem;
+    text-align: center; }
+  .cont-cuidados .p-cuidado {
+    font-size: 1.1rem;
+    margin-bottom: 60px;
+    letter-spacing: 3px;
+    line-height: 1.8em; }
+  .cont-cuidados .enc-cuidado {
+    font-size: 1.5rem;
+    background-color: #63632d;
+    text-align: center;
+    color: #fff; }
   .cont-cuidados .img-feng {
-    margin-left: 25%; } }
+    min-width: 720px; }
+  .cont-cuidados .feng-video iframe {
+    width: 750px;
+    height: 480px; }
+  .cont-cuidados .img-cuidado-izquierda {
+    width: 100px;
+    height: 100px; }
+  .cont-cuidados .img-cuidado-derecha {
+    width: 100px;
+    height: 100px; } }
+
+@media screen and (min-width: 1200x) {
+  .cont-cuidados .img-feng {
+    max-width: 800px; } }
 
 /*importar estilos contacto*/
 /* formulario de contacto*/
 form {
-  width: 100%;
-  margin: auto;
+  width: 80%;
+  max-width: 400px;
+  margin: 50px auto;
   background: #61481c;
   padding: 10px 20px;
-  margin-top: 20px;
-  margin-bottom: 50px;
-  border-radius: 7px;
+  border-radius: 17px;
   font-family: 'Uchen', serif; }
   form h2 {
     color: #fff;
@@ -415,22 +420,25 @@ form {
     max-height: 200px;
     max-width: 100%; }
   form #boton {
-    padding: 20px;
-    font-size: 1rem; }
+    display: block;
+    width: 120px;
+    height: auto;
+    margin: auto;
+    font-size: 1rem;
+    color: black; }
 
 /*media screen 768px*/
 @media screen and (min-width: 768px) {
   .contacto form {
-    width: 80%;
-    height: 500px;
+    max-width: 650px;
+    height: auto;
     background-color: #66532e; }
   .contacto #boton {
-    background: #fff;
     padding: 20px;
     font-size: 1.2em; } }
 
-/*media screen 1440px*/
-@media screen and (min-width: 768px) {
+/*media screen 1200px*/
+@media screen and (min-width: 1200px) {
   .contacto form {
     width: 50%;
     height: 500px; }
@@ -439,4 +447,6 @@ form {
   .contacto input, .contacto textarea {
     font-size: 1rem; }
   .contacto #boton {
-    font-size: 1.5em; } }
+    font-size: 1.5em; }
+  .contacto #boton :hover {
+    background-color: aqua; } }
